--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "aiohttp>=3.10.5",
     "requests>=2.32.3",
     "PyJWT>=2.9.0",
+    "httpx>=0.27.2",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
@@ -34,6 +35,7 @@ dev = [
     "mypy>=1.11.2",
     "isort>=5.13.2",
 ]
+
 [tool.mypy]
 plugins=["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
 exclude="alembic"
